--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body class="bg-white dark:bg-dark-mode font-primary">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  <script type="module" src="/src/index.jsx"></script>
 </body>
 
 </html>
